# orwell

./: .env  .gitignore  Cargo.toml  README.md  build.rs  diesel.toml  flash.txt  orwell-client.toml  orwell-server.toml  orwell.proto  send.txt
.github/workflows/: ubuntu-ci.yml
migrations/2025-06-14-120157_1/: down.sql  up.sql
migrations/2025-06-14-121940_3/: down.sql  up.sql
migrations/2025-06-14-122323_4/: down.sql  up.sql
migrations/2025-06-14-172344_5/: down.sql  up.sql
migrations/2025-06-15-072817_6/: down.sql  up.sql
migrations/2025-06-17-094006_2/: down.sql  up.sql
migrations/2025-06-17-094139_3/: down.sql  up.sql
src/: lib.rs  schema.rs
src/client/: client.rs  clientpacket.rs  command_adapter.rs  config.rs  handler.rs  key.rs  logger.rs  message.rs  message_adapter.rs  mod.rs  network.rs  notify.rs  packet_adapter.rs  renderer.rs  service.rs  theme.rs  widgets.rs
src/client/adapters/: broadcast_message_adapter.rs  client_info_adapter.rs  color_response_adapter.rs  heartbeat_adapter.rs  history_message_adapter.rs  login_response_adapter.rs  mod.rs  pre_login_adapter.rs  ratchet_step_adapter.rs  register_response_adapter.rs
src/client/commands/: afk_command.rs  color_command.rs  connect_command.rs  login_command.rs  mod.rs  register_command.rs
src/client/message_adapters/: color_change_message_adapter.rs  enter_afk_message_adapter.rs  left_afk_message_adapter.rs  login_message_adapter.rs  logout_message_adapter.rs  mod.rs  text_message_adapter.rs
src/pb/: mod.rs  orwell.rs
src/server/: client.rs  config.rs  message.rs  packet_adapter.rs  server.rs  service.rs  token.rs
src/server/adapters/: afk_adapter.rs  color_adapter.rs  heartbeat_adapter.rs  login_adapter.rs  message_adapter.rs  mod.rs  pre_login_adapter.rs  register_adapter.rs
src/shared/: config.rs  encryption.rs  helper.rs  mod.rs
