[lib]
name = "orwell"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"

[[bin]]
name = "server"
path = "src/server/server.rs"

[package]
name = "orwell-client"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = "0.4.41"
color-eyre = "0.6.5"
crystals-dilithium = "1.0.0"
lazy_static = "1.5.0"
pqcrypto-kyber = "0.8.1"
prost = "0.13.5"
rand = "0.8.1"
ratatui = "0.29.0"
sha2 = "0.10.9"
unicode-segmentation = "1.12.0"
unicode-width = "=0.2.0"
pqcrypto-traits = "0.3.5"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
tokio = { version = "1.45.1", features = [ "full" ] }
futures-util = "0.3.31"
diesel = { version = "2.2.10", features = [ "sqlite", "returning_clauses_for_sqlite_3_35", "chrono" ] }
sha3 = "0.10.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = [ "v7" ] }
hkdf = "0.12.4"
winapi = "0.3.9"
notify-rust = "4.11.7"
rustls = "0.23.28"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.2"
argon2 = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"

[build-dependencies]
prost-build = "0.13.5"
